--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,14 @@
-fastapi==0.100.0
-uvicorn[standard]==0.24.0
-sqlalchemy==1.4.49  # Downgrade for Python 3.12 compatibility
-aiosqlite==0.19.0
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+sqlalchemy==2.0.36
+aiosqlite==0.20.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-email-validator==2.1.1
-python-dotenv==1.0.0
-pydantic==1.10.12   # ADD THIS - required for FastAPI 0.100.0
+email-validator==2.2.0
+python-dotenv==1.0.1
+pydantic==2.10.6
+pydantic-settings==2.7.1
+numpy==1.26.4
+pandas==2.2.3
+scikit-learn==1.5.2
+scipy==1.13.1
